Bug 305866 - previewer shouldn't be in the dataengines
Summary: previewer shouldn't be in the dataengines
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: General (other bugs)
Version First Reported In: 0.1alpha2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 305865 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-27 10:11 UTC by Giorgos Tsiapaliokas
Modified: 2012-09-24 15:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giorgos Tsiapaliokas 2012-08-27 10:11:47 UTC
When you create a dataengine the previewer action is visible,
but it shouldn't.

Reproducible: Always
Comment 1 Giorgos Tsiapaliokas 2012-08-27 10:18:46 UTC
*** Bug 305865 has been marked as a duplicate of this bug. ***
Comment 2 Giorgos Tsiapaliokas 2012-09-24 15:57:55 UTC
Git commit 19792002e9e8055c0525f896ba03c2462b6188d5 by Giorgos Tsiapaliokas.
Committed on 24/09/2012 at 17:56.
Pushed by tsiapaliwkas into branch 'master'.

show the preview action only when its necessary

REVIEW: 106477
Related: bug 305867

M  +64   -48   mainwindow.cpp

http://commits.kde.org/plasmate/19792002e9e8055c0525f896ba03c2462b6188d5