show the preview action only when its necessary

REVIEW: 106477
BUG: 305866
BUG: 305867